--- a/MeetingLawyers/plugin.xml
+++ b/MeetingLawyers/plugin.xml
@@ -1,7 +1,17 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com-meetinglawyers-cordova" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="com-meetinglawyers-cordova" version="0.0.1"
+    xmlns="http://apache.org/cordova/ns/plugins/1.0"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <name>MeetingLawyers</name>
     <js-module name="MeetingLawyers" src="www/MeetingLawyers.js">
         <clobbers target="meetinglawyers" />
     </js-module>
+    <platform name="ios">
+        <config-file parent="/*" target="config.xml">
+            <feature name="MeetingLawyers">
+                <param name="ios-package" value="MeetingLawyers" />
+            </feature>
+        </config-file>
+        <source-file src="src/ios/MeetingLawyers.swift" />
+    </platform>
 </plugin>
