--- a/CDVMeetingLawyers/package.json
+++ b/CDVMeetingLawyers/package.json
@@ -5,7 +5,8 @@
   "cordova": {
     "id": "com-meetinglawyers-cordova",
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "repository": {
@@ -14,7 +15,8 @@
   },
   "keywords": [
     "ecosystem:cordova",
-    "cordova-ios"
+    "cordova-ios",
+    "cordova-android"
   ],
   "author": "Manel Roca",
   "license": "ISC",
