feat: add Android Main Activity

--- a/CDVMeetingLawyers/plugin.xml
+++ b/CDVMeetingLawyers/plugin.xml
@@ -34,8 +34,14 @@
                 <!-- <param name="onload" value="true" />  -->
             </feature>
         </config-file>
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <activity android:label="MeetingLawyers Activity" android:name="com.meetinglawyers.cordova.CDVMeetingLawyersMainActivity"></activity>
+        </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
-        <source-file src="src/android/CDVMeetingLawyers.java" target-dir="src/com.meetinglawyers.cordova/CDVMeetingLawyers" />
+        <source-file src="src/android/CDVMeetingLawyers.java" target-dir="src/com/meetinglawyers/cordova" />
+        <source-file src="src/android/CDVMeetingLawyersMainActivity.java" target-dir="src/com/meetinglawyers/cordova" />
+        <source-file src="src/android/activity_meetinglawyers_main.xml" target-dir="res/layout"/>
+
         <framework src="src/android/plugin.gradle" custom="true" type="gradleReference"/>
     </platform>
 </plugin>
