--- a/plugin.xml
+++ b/plugin.xml
@@ -15,6 +15,8 @@
             <preference name="UseSwiftLanguageVersion" value="5" />
         </config-file>
         <source-file src="src/ios/CDVMeetingLawyers.swift" />
+        <source-file src="src/ios/UIColor+Hex.swift" />
+        <source-file src="src/ios/UIColor+Luminance.swift" />
         <podspec>
             <config>
                 <source url="https://cdn.cocoapods.org/" />
@@ -22,7 +24,7 @@
                 <source url="https://github.com/MeetingLawyers/ios-meeting-podspec.git" />
             </config>
             <pods use-frameworks="true">
-                <pod name="MeetingLawyers" spec="0.1.1" />
+                <pod name="MeetingLawyers" spec="0.1.2" />
             </pods>
         </podspec>
     </platform>
