--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com-meetinglawyers-cordova" version="0.0.4"
+<plugin id="com-meetinglawyers-cordova" version="0.0.5"
     xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>MeetingLawyers</name>
@@ -35,7 +35,7 @@
             </feature>
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <activity android:label="MeetingLawyers" android:name="com.meetinglawyers.cordova.CDVMeetingLawyersMainActivity"></activity>
+            <activity android:label="MeetingLawyers" android:name="com.meetinglawyers.cordova.CDVMeetingLawyersMainActivity" android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
         <source-file src="src/android/CDVMeetingLawyers.java" target-dir="src/com/meetinglawyers/cordova" />
